objects/CustomerEventMetadata__c.object
<CustomObject>
    <fields>
        <fullName>Business_Builder_Program_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Builder Program Year Metadata</description>
        <label>Business Builder Program Year</label>
        <referenceTo>BusinessBuilderProgramYear__c</referenceTo>
        <relationshipLabel>Business Builder Program Year Metadata</relationshipLabel>
        <relationshipName>Document_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign record that is using this metadata.</description>
        <inlineHelpText>Campaign record that is using this metadata.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Customer_Event_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Document being added to the Community</description>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_End_Date__c</fullName>
        <description>Determines the date the Document should stop displaying in the Dealer Community</description>
        <inlineHelpText>Select the date the Document should stop displaying in the Dealer Community</inlineHelpText>
        <label>Display End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Order_for_Type__c</fullName>
        <description>Order that the images should display in the Dealer Community</description>
        <inlineHelpText>Order that the documents should display in the Dealer Community</inlineHelpText>
        <label>Display Order for Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Start_Date__c</fullName>
        <description>Determines the dates that the Document should display in the Dealer Community</description>
        <inlineHelpText>Select the date the Document should start displaying in the Dealer Community</inlineHelpText>
        <label>Display Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentDeveloperName__c</fullName>
        <description>Document Unique Name name for Document record. Not the Document Name/Label.</description>
        <inlineHelpText>Document Unique Name name for Document record. Not the Document Name/Label.</inlineHelpText>
        <label>Document Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentFolderDeveloperName__c</fullName>
        <description>Folder Unique Name name for Document Folder record. Not the Folder Name/Label.</description>
        <inlineHelpText>Folder Unique Name name for Document Folder record. Not the Folder Name/Label.</inlineHelpText>
        <label>Folder Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>Name of the Document that will display in the community</description>
        <inlineHelpText>Name of the Document that will display in the community</inlineHelpText>
        <label>Document Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetadataType__c</fullName>
        <description>Type of Metadata, Image Type or Download PDF.</description>
        <inlineHelpText>Type of Metadata, Image Type or Download PDF.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banner Mobile</fullName>
                </value>
                <value>
                    <fullName>Carousel Desktop</fullName>
                </value>
                <value>
                    <fullName>Carousel Mobile</fullName>
                </value>
                <value>
                    <fullName>Banner Desktop</fullName>
                </value>
                <value>
                    <fullName>Download PDF</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Form</fullName>
                </value>
                <value>
                    <fullName>Business Builder Material</fullName>
                </value>
                <value>
                    <fullName>Selling Support Program Details</fullName>
                </value>
                <value>
                    <fullName>Slide Carousel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Metadata</label>
    <nameField>
        <displayFormat>DM{0000}</displayFormat>
        <label>Document Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Metadata</pluralLabel>
    <recordTypes>
        <fullName>Business_Builder_Program_Year_Metadata</fullName>
        <active>true</active>
        <description>Documents Metadata related to the Business Builder Program Year</description>
        <label>Business Builder Program Year Metadata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Event_Metadata</fullName>
        <active>true</active>
        <description>Default record type for Customer Event Metadata</description>
        <label>Customer Event Metadata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Default record type for Customer Event Metadata</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Document_Unique_Name</fullName>
        <active>true</active>
        <description>The Document Unique Name field can only contain underscores and alphanumeric characters.</description>
        <errorConditionFormula>AND( 
NOT( REGEX( DocumentDeveloperName__c , &quot;[a-zA-Z0-9_]+&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>DocumentDeveloperName__c</errorDisplayField>
        <errorMessage>The Document Unique Name field can only contain underscores and alphanumeric characters.</errorMessage>
    </validationRules>
</CustomObject>